syntax = "proto3";

package ranker.v1.token;

option go_package = "github.com/web3eye-io/Web3Eye/proto/web3eye/ranker/v1/token";
import "web3eye/nftmeta/v1/token/token.proto";

service Manager {
  rpc GetToken(nftmeta.v1.token.GetTokenRequest) returns (nftmeta.v1.token.GetTokenResponse) {}
  rpc GetTokenOnly(nftmeta.v1.token.GetTokenOnlyRequest) returns (nftmeta.v1.token.GetTokenOnlyResponse) {}
  rpc GetTokens(nftmeta.v1.token.GetTokensRequest) returns (nftmeta.v1.token.GetTokensResponse) {}
  rpc CountTokens(nftmeta.v1.token.CountTokensRequest) returns (nftmeta.v1.token.CountTokensResponse) {}
  rpc Search(SearchTokenRequest) returns (SearchResponse) {}
  rpc SearchPage(SearchPageRequest) returns (SearchResponse) {}
}

message SiblingToken{
  string ID = 10;
  string TokenID = 20;
  string ImageURL = 30;
  string IPFSImageURL = 40;
}

message SearchToken{
  // nftmeta.v1.token.Token Token = 10;
  string ID = 10;
  string ChainType = 20;
  string ChainID = 30;
  string Contract = 40;
  string TokenType = 50;
  string TokenID = 60;
  string Owner = 70;
  string URI = 80;
  string URIType = 90;
  string ImageURL = 100;
  string VideoURL = 110;
  string Description = 120;
  string Name = 130;
  nftmeta.v1.token.ConvertState VectorState = 140;
  int64 VectorID = 150;
  string Remark = 160;
  string IPFSImageURL = 170;
  string ImageSnapshotID = 180;
  int32 TransfersNum = 190;
  repeated SiblingToken SiblingTokens = 400;
  uint32 SiblingsNum = 410;
  float Distance = 500;
}

message SearchTokenRequest {
  repeated float Vector = 10;
  uint32 Limit = 20;
}

message SearchPageRequest {
  string StorageKey =10;
  uint32 Page = 20;
}

message SearchResponse {
  repeated SearchToken Infos = 10;
  string StorageKey =20;
  uint32 Page = 30;
  uint32 TotalPages = 40;
  uint32 TotalTokens = 50;
  uint32 Limit = 60;
}


